--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	
-<!-- <p>プルリクエストの練習</p> -->
-<h1>インデックスファイルの修正！</h1>
+<h1>インデックスファイルの修正</h1>
+<p>プルリクエストの練習その1</p>
 </body>
 </html>
